# air-dirct

./: .gitignore  DESIGN.md  FINAL_SUMMARY.md  FRONTEND_BACKEND_INTEGRATION.md  FRONTEND_OPTIONS.md  INTEGRATION_SUMMARY.md  IOS_SOLUTIONS.md  OPTIMIZATION_SUMMARY.md  PROJECT_STRUCTURE.md  PYTHON_BACKEND_GUIDE.md  PYTHON_BACKEND_SUMMARY.md  QUICK_START.md  README.md  SETUP_FLUTTER.md  test_integration.sh
app/: OPTIMIZATION.md  README.md  pubspec.yaml
app/android/app/: build.gradle.kts
app/ios/Runner/: Info.plist
app/ios/Runner.xcodeproj/: project.pbxproj
app/lib/: main.dart
app/lib/models/: history_item.dart  search_response.dart  word_definition.dart
app/lib/screens/: home_screen.dart  word_detail_screen.dart
app/lib/services/: api_config.dart  dictionary_service.dart  history_service.dart
app/linux/: CMakeLists.txt
app/linux/runner/: my_application.cc
app/macos/Runner.xcodeproj/: project.pbxproj
app/macos/Runner/Configs/: AppInfo.xcconfig
app/test/: widget_test.dart
app/web/: index.html  manifest.json
app/windows/: CMakeLists.txt
app/windows/runner/: Runner.rc  main.cpp
server/: API_EXAMPLES.md  README.md  main.py  pyproject.toml  requirements.txt  run.sh  test_dictionary_mock.py  test_dictionary_service.py  test_dictionary_simple.py  test_llm_service.py  test_search_simple.py
server/api/: __init__.py  favorites.py  llm.py  search.py
server/models/: __init__.py  favorite.py  llm_response.py  search.py  word.py
server/services/: __init__.py  dictionary.py  favorites.py  llm_service.py  translation.py
(+3 files in other folders)
